--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -353,6 +353,9 @@ $slogan-animation-offset-mobile: 400px;
   }
   .intro__slogan_wrap--2 {
     animation-name: slogan2Animation--mobile;
+    .intro__slogan {
+      font-size: 40px !important;
+    }
   }
 }
 
@@ -585,6 +588,10 @@ $search-filter-panel-gap: 40px;
 }
 
 @media (max-width: $screen-xs-max) {
+  .intro__slogans {
+    overflow: hidden;
+  }
+
   .header__search_wrap {
     margin-left: $header-logo-size + 10px;
     width: calc(100% - #{$header-logo-size + $header-toggle-btn-width + 40px});
